--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-27 05:31+0100\n"
+"POT-Creation-Date: 2022-11-27 12:53+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,45 +18,103 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: administration/models.py:8
+#: administration/models.py:12
 msgid "The date"
 msgstr "La fecha"
 
-#: administration/models.py:9
+#: administration/models.py:13
 msgid "Number of emails sent for booking request"
 msgstr "Número de correos enviados para la solicitud de reserva"
 
-#: administration/models.py:10
+#: administration/models.py:14
 msgid "Number of emails sent for contact form"
 msgstr "Número de correos enviados para el formulario de contacto"
 
-#: administration/models.py:11
+#: administration/models.py:15
 msgid "Other emails sent"
 msgstr "Otros correos enviados"
 
-#: administration/models.py:12
+#: administration/models.py:16
 msgid "Total number of emails sent"
 msgstr "Total de correos enviados"
 
-#: administration/models.py:18
+#: administration/models.py:22
 msgid "Permissions Emails"
 msgstr "Permisos de correos"
 
-#: administration/views.py:185
+#: administration/models.py:34
+msgid "Photo"
+msgid_plural "Photos"
+msgstr[0] "Foto"
+msgstr[1] "Fotos"
+
+#: administration/models.py:35 administration/models.py:64
+msgid "Is active"
+msgstr "Está activo"
+
+#: administration/models.py:36 administration/models.py:66
+msgid "Was downloaded"
+msgstr "Fue descargado"
+
+#: administration/models.py:63
+msgid "Date"
+msgstr "Fecha"
+
+#: administration/models.py:65
+msgid "Expiration date"
+msgstr "Fecha de expiración"
+
+#: administration/models.py:67
+msgid "Link to download"
+msgstr "Enlace para descargar"
+
+#: administration/models.py:68
+msgid "ID delivery"
+msgstr "ID de entrega"
+
+#: administration/models.py:69
+#: templates/administration/add/add_downloadable_file.html:39
+#: templates/administration/list/list_created_link.html:25
+#: templates/administration/list/list_created_link.html:55
+msgid "Client name"
+msgstr "Nombre del cliente"
+
+#: administration/models.py:70
+#: templates/administration/add/add_downloadable_file.html:35
+msgid "Client email"
+msgstr "Correo del cliente"
+
+#: administration/views.py:189
 msgid "Email sent successfully"
 msgstr "Correo enviado con éxito"
 
-#: administration/views.py:187
+#: administration/views.py:191
 msgid "Email not sent"
 msgstr "Correo no enviado"
 
-#: administration/views.py:189
+#: administration/views.py:193
 msgid "Email already sent"
 msgstr "Correo ya enviado"
 
-#: administration/views.py:191
+#: administration/views.py:195
 msgid "Session request does not exist"
 msgstr "La solicitud de sesión no existe"
+
+#: administration/views.py:391
+msgid ""
+"If you want the website to send the link automatically to the client, "
+"please, put the client "
+msgstr ""
+"Si desea que el sitio web envíe el enlace automáticamente al cliente, "
+"por favor, ponga el cliente "
+
+#: administration/views.py:395
+msgid "Create downloadable file"
+msgstr "Crear archivo descargable"
+
+#: administration/views.py:408
+msgid "List of link to download images"
+msgstr "Lista de enlaces para descargar imágenes"
 
 #: client/form.py:10
 msgid "--- Select a package ---"
@@ -142,6 +200,8 @@ msgstr "Nombre completo"
 
 #: client/form.py:64 templates/administration/list/list_contact_forms.html:26
 #: templates/administration/list/list_contact_forms.html:59
+#: templates/administration/list/list_created_link.html:26
+#: templates/administration/list/list_created_link.html:56
 #: templates/administration/list/list_requested_session.html:41
 #: templates/administration/list/list_requested_session.html:117
 #: templates/administration/list/list_user.html:27
@@ -330,14 +390,16 @@ msgstr "¡Gracias por su mensaje, pero no se envió!"
 msgid "Create new album"
 msgstr "Crear nuevo álbum"
 
-#: templates/administration/add/add_photos.html:16
-msgid "Total pictures uploaded"
-msgstr "Total de fotos subidas"
-
+#: templates/administration/add/add_downloadable_file.html:30
 #: templates/administration/add/add_photos.html:39
 msgid "Upload image"
 msgstr "Subir imagen"
 
+#: templates/administration/add/add_downloadable_file.html:42
+msgid "Put the client name for reference"
+msgstr "Ponga el nombre del cliente para referencia"
+
+#: templates/administration/add/add_downloadable_file.html:59
 #: templates/administration/add/add_photos.html:52
 #: templates/administration/list/list_requested_session.html:94
 #: templates/administration/list/list_requested_session.html:99
@@ -346,12 +408,18 @@ msgstr "Subir imagen"
 msgid "Send"
 msgstr "Enviar"
 
+#: templates/administration/add/add_downloadable_file.html:61
 #: templates/administration/add/add_photos.html:54
 #: templates/administration/edit/update_requested_session.html:17
 msgid "Cancel"
 msgstr "Cancelar"
 
+#: templates/administration/add/add_photos.html:16
+msgid "Total pictures uploaded"
+msgstr "Total de fotos subidas"
+
 #: templates/administration/base.html:9 templates/administration/base.html:181
+#: templates/administration/list/data.html:43
 #: templates/administration/view/index.html:28
 #: templates/administration/view/index.html:36
 msgid "Dashboard"
@@ -390,28 +458,101 @@ msgid "Portfolio"
 msgstr "Portafolio"
 
 #: templates/administration/base.html:268
+msgid "Send photo via link"
+msgstr "Enviar foto a través de enlace"
+
+#: templates/administration/base.html:278
+msgid "Create link"
+msgstr "Crear enlace"
+
+#: templates/administration/base.html:285
+msgid "View all links"
+msgstr "Ver todos los enlaces"
+
+#: templates/administration/base.html:294
 msgid "Client management"
 msgstr "Gestión de clientes"
 
-#: templates/administration/base.html:276
+#: templates/administration/base.html:302
 msgid "Message list"
 msgstr "Lista de mensajes"
 
-#: templates/administration/base.html:284
+#: templates/administration/base.html:310
 msgid "Help"
 msgstr "Ayuda"
 
-#: templates/administration/base.html:292
+#: templates/administration/base.html:318
 msgid "Settings"
 msgstr "Configuraciones"
 
-#: templates/administration/base.html:300
+#: templates/administration/base.html:326
 msgid "Change password"
 msgstr "Cambiar contraseña"
 
-#: templates/administration/base.html:308
+#: templates/administration/base.html:334
 msgid "Sign out"
 msgstr "Desconectar"
+
+#: templates/administration/download/downloadable_images.html:4
+#: templates/administration/download/downloadable_images.html:10
+msgid "Downloads"
+msgstr "Descargas"
+
+#: templates/administration/download/downloadable_images.html:11
+msgid "Hi"
+msgstr "Hola"
+
+#: templates/administration/download/downloadable_images.html:17
+msgid "Zipped version"
+msgstr "Versión comprimida"
+
+#: templates/administration/download/downloadable_images.html:19
+msgid ""
+"\n"
+"                                            You can download your copy of "
+"your edited photos here. This link expires in\n"
+"                                            72 hours. This is a one time "
+"download. If you need to download the photos\n"
+"                                            again, please contact us. Zip "
+"format.\n"
+"                                        "
+msgstr ""
+"\n"
+"                                            Puede descargar una copia de "
+"sus fotos editadas aquí. Este enlace caduca en\n"
+"                                            72 horas. Esta es una descarga "
+"única. Si necesita descargar las fotos\n"
+"                                            de nuevo, comuníquese con nosotros. "
+"Formato zip.\n"
+"                                        "
+
+#: templates/administration/download/downloadable_images.html:26
+msgid "Download zip"
+msgstr "Descargar zip"
+
+#: templates/administration/download/downloadable_images.html:35
+msgid "Individual photos"
+msgstr "Fotos individuales"
+
+#: templates/administration/download/downloadable_images.html:37
+msgid ""
+"\n"
+"                                            You can download your copy of "
+"your edited photos here. This link expires in\n"
+"                                            72 hours. This is a one time "
+"download. If you need to download the photos\n"
+"                                            again, please contact us. "
+"Individual photos.\n"
+"                                        "
+msgstr ""
+"\n"
+"                                            Puede descargar una copia de "
+"sus fotos editadas aquí. Este enlace caduca en\n"
+"                                            72 horas. Esta es una descarga "
+"única. Si necesita descargar las fotos\n"
+"                                            de nuevo, comuníquese con nosotros. "
+"Fotos individuales.\n"
+"                                        "
 
 #: templates/administration/edit/update_requested_session.html:4
 #: templates/administration/edit/update_requested_session.html:12
@@ -540,6 +681,20 @@ msgstr "Tema"
 #: templates/administration/list/list_contact_forms.html:61
 msgid "Message"
 msgstr "Mensaje"
+
+#: templates/administration/list/list_created_link.html:10
+msgid "Created links"
+msgstr "Enlaces creados"
+
+#: templates/administration/list/list_created_link.html:27
+#: templates/administration/list/list_created_link.html:57
+msgid "Link"
+msgstr "Enlace"
+
+#: templates/administration/list/list_created_link.html:28
+#: templates/administration/list/list_created_link.html:58
+msgid "Downloaded"
+msgstr "Descargado"
 
 #: templates/administration/list/list_requested_session.html:5
 #: templates/administration/list/list_requested_session.html:8
@@ -746,10 +901,8 @@ msgstr "Plazo de entrega"
 #: templates/client/booking_and_promotions/promotions.html:89
 #: templates/client/booking_and_promotions/promotions.html:90
 #: templates/client/booking_and_promotions/promotions.html:91
-msgid "day"
-msgid_plural "days"
-msgstr[0] "día"
-msgstr[1] "días"
+msgid "days"
+msgstr "días"
 
 #: templates/client/booking_and_promotions/promotions.html:97
 msgid "Only Orlando"
@@ -1110,3 +1263,8 @@ msgstr "Haga clic"
 #: templates/static_pages_and_forms/success.html:71
 msgid "here"
 msgstr "aquí"
+
+#~ msgid "day"
+#~ msgid_plural "days"
+#~ msgstr[0] "día"
+#~ msgstr[1] "días"
